--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_color"
         tools:context=".ui.user.ForgotPasswordFragment">
 
 
@@ -20,8 +21,8 @@
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:src="@drawable/upupherelogo"
-            android:contentDescription="@string/content_description" />
+            android:contentDescription="@string/content_description"
+            android:src="@drawable/upupherelogo" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,21 +50,31 @@
                 android:layout_marginEnd="15dp"
                 android:fontFamily="@font/open_sans"
                 android:text="@string/reset_password_instruction"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/email"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textField1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                android:ems="10"
                 android:hint="@string/your_email"
-                android:importantForAutofill="no"
-                android:inputType="text|textEmailAddress"
-                android:text="@={viewmodel.emailAddress}"
-                android:afterTextChanged="@{viewmodel::afterEmailChanged}"/>
+                app:startIconContentDescription="@string/content_description_end_icon"
+                app:startIconDrawable="@drawable/ic_profile"
+                app:startIconTint="@color/colorPrimary">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:afterTextChanged="@{viewmodel::afterEmailChanged}"
+                    android:ems="10"
+                    android:importantForAutofill="no"
+                    android:inputType="text|textEmailAddress"
+                    android:text="@={viewmodel.emailAddress}" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/sendButton"
@@ -79,15 +90,18 @@
                 android:textColor="@color/background_color"
                 android:textStyle="bold" />
 
-            <TextView
+            <Button
                 android:id="@+id/usePhoneInsteadText"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans"
                 android:onClick="@{viewmodel::onUsingPhoneToReset}"
                 android:text="@string/use_phone_to_reset_password"
                 android:textAlignment="center"
-                android:textColor="@color/redirect_color" />
+                android:textColor="@color/redirect_color"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/statusText"
@@ -106,7 +120,8 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:visibility="gone" />
         </LinearLayout>
     </RelativeLayout>
 
