--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewmodel"
@@ -14,6 +15,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
+        android:background="@color/background_color"
         android:orientation="vertical"
         tools:context=".ui.user.ResetPasswordFragment">
 
@@ -26,35 +28,53 @@
             android:textAlignment="center"
             android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/newPassword"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textField1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:ems="10"
-            android:fontFamily="@font/open_sans"
             android:hint="@string/set_new_password"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:text="@={viewmodel.newPassword}"/>
+            app:startIconContentDescription="@string/content_description_end_icon"
+            app:startIconDrawable="@drawable/ic_password"
+            app:startIconTint="@color/colorPrimary">
 
-        <EditText
-            android:id="@+id/confirmNewPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:ems="10"
+                android:fontFamily="@font/open_sans"
+                android:importantForAutofill="no"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:text="@={viewmodel.newPassword}" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textField2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:ems="10"
-            android:fontFamily="@font/open_sans"
             android:hint="@string/confirm_new_password"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:text="@={viewmodel.confirmNewPassword}"/>
+            app:startIconContentDescription="@string/content_description_end_icon"
+            app:startIconDrawable="@drawable/ic_password"
+            app:startIconTint="@color/colorPrimary">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/confirmNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:ems="10"
+                android:fontFamily="@font/open_sans"
+                android:importantForAutofill="no"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:text="@={viewmodel.confirmNewPassword}" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/confirmButton"
@@ -67,7 +87,8 @@
             android:onClick="@{viewmodel::onConfirmButtonClick}"
             android:text="@string/confirm"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/background_color" />
+            android:textColor="@color/background_color"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/statusText"
