--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -57,7 +57,6 @@
                 android:id="@+id/textField1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/your_email"
                 app:startIconContentDescription="@string/content_description_end_icon"
                 app:startIconDrawable="@drawable/ic_profile"
                 app:startIconTint="@color/colorPrimary">
@@ -70,6 +69,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
                     android:afterTextChanged="@{viewmodel::afterEmailChanged}"
+                    android:hint="@string/your_email"
                     android:ems="10"
                     android:importantForAutofill="no"
                     android:inputType="text|textEmailAddress"
@@ -83,10 +83,11 @@
                 android:layout_margin="15dp"
                 android:alpha="0.5"
                 android:background="@color/colorPrimaryDark"
+                android:contentDescription="@string/reset_password_button"
                 android:enabled="false"
                 android:onClick="@{viewmodel::onResetPasswordButtonClick}"
                 android:text="@string/reset_password_button"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/background_color"
                 android:textStyle="bold" />
 
@@ -121,6 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:contentDescription="@string/loading_content_description"
                 android:visibility="gone" />
         </LinearLayout>
     </RelativeLayout>
