--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -32,7 +32,6 @@
             android:id="@+id/textField1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/set_new_password"
             app:startIconContentDescription="@string/content_description_end_icon"
             app:startIconDrawable="@drawable/ic_password"
             app:startIconTint="@color/colorPrimary">
@@ -44,6 +43,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:hint="@string/set_new_password"
                 android:ems="10"
                 android:fontFamily="@font/open_sans"
                 android:importantForAutofill="no"
@@ -56,7 +56,6 @@
             android:id="@+id/textField2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/confirm_new_password"
             app:startIconContentDescription="@string/content_description_end_icon"
             app:startIconDrawable="@drawable/ic_password"
             app:startIconTint="@color/colorPrimary">
@@ -68,6 +67,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:hint="@string/confirm_new_password"
                 android:ems="10"
                 android:fontFamily="@font/open_sans"
                 android:importantForAutofill="no"
@@ -84,6 +84,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:background="@color/colorPrimaryDark"
+            android:contentDescription="@string/confirm"
             android:onClick="@{viewmodel::onConfirmButtonClick}"
             android:text="@string/confirm"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -103,7 +104,8 @@
             android:id="@+id/progressBar3"
             style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/loading_content_description" />
 
     </LinearLayout>
 
