--- a/app/src/main/res/layout/fragment_display_photo.xml
+++ b/app/src/main/res/layout/fragment_display_photo.xml
@@ -10,7 +10,8 @@
     <ImageView
         android:id="@+id/selectedImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:contentDescription="@string/chosen_image_description" />
 </FrameLayout>
 
 
