--- a/app/src/main/res/layout/notification_badge_layout.xml
+++ b/app/src/main/res/layout/notification_badge_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout style="?attr/actionButtonStyle"
+<FrameLayout xmlns:tools="http://schemas.android.com/tools"
+    style="?attr/actionButtonStyle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -11,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_notification"/>
+        app:srcCompat="@drawable/ic_notification"
+        android:contentDescription="@string/amount_of_notification"/>
 
     <TextView
         android:id="@+id/notification_badge"
@@ -25,6 +27,7 @@
         android:padding="3dp"
         android:textColor="@android:color/white"
         android:text="0"
-        android:textSize="10sp"/>
+        android:textSize="10sp"
+        tools:ignore="HardcodedText,SmallSp" />
 
 </FrameLayout>
