--- a/app/src/main/res/layout/room_item_row.xml
+++ b/app/src/main/res/layout/room_item_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     xmlns:bind="http://schemas.android.com/apk/res/android">
 
@@ -9,68 +10,67 @@
             type="upuphere.com.upuphere.models.AllRooms" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        bind:layout_width="match_parent"
+        bind:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            bind:layout_width="match_parent"
+            bind:layout_height="wrap_content"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
-            android:layout_centerInParent="true">
+            bind:layout_centerInParent="true">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="5dp">
+                bind:layout_width="match_parent"
+                bind:layout_height="match_parent"
+                bind:padding="5dp">
 
                 <ImageView
-                    android:id="@+id/room_profile_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/content_description"
-                    android:scaleType="fitCenter"
+                    bind:id="@+id/room_profile_image"
+                    bind:layout_width="match_parent"
+                    bind:layout_height="wrap_content"
+                    bind:contentDescription="@string/room_image_description"
+                    bind:scaleType="fitCenter"
                     app:roomImageUrl="@{model.roomProfileImage}"
-                    tools:srcCompat="@tools:sample/avatars"/>
+                    tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/room_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/room_profile_image"
-                    android:text="@{model.roomName}"
-                    android:textAlignment="textStart"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/open_sans"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="10dp"/>
+                    bind:id="@+id/room_name"
+                    bind:layout_width="wrap_content"
+                    bind:layout_height="wrap_content"
+                    bind:layout_below="@+id/room_profile_image"
+                    bind:text="@{model.roomName}"
+                    bind:textAlignment="textStart"
+                    bind:textStyle="bold"
+                    bind:fontFamily="@font/open_sans"
+                    bind:layout_alignParentStart="true"
+                    bind:layout_marginTop="10dp"/>
 
                 <TextView
-                    android:id="@+id/timestamp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/room_name"
+                    bind:id="@+id/timestamp"
+                    bind:layout_width="wrap_content"
+                    bind:layout_height="wrap_content"
+                    bind:layout_below="@+id/room_name"
                     app:timeAgo="@{model.createdAt}"
-                    android:textAlignment="textStart"
-                    android:fontFamily="@font/open_sans"
-                    android:layout_toStartOf="@+id/moreButton"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="5dp"/>
+                    bind:textAlignment="textStart"
+                    bind:fontFamily="@font/open_sans"
+                    bind:layout_toStartOf="@+id/moreButton"
+                    bind:layout_alignParentStart="true"
+                    bind:layout_marginTop="5dp"/>
 
                 <ImageButton
-                    android:id="@+id/moreButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_below="@id/room_name"
-                    android:background="@null"
+                    bind:id="@+id/moreButton"
+                    bind:layout_width="wrap_content"
+                    bind:layout_height="wrap_content"
+                    bind:layout_alignParentEnd="true"
+                    bind:layout_marginStart="10dp"
+                    bind:layout_marginTop="5dp"
+                    bind:layout_marginEnd="10dp"
+                    bind:layout_below="@id/room_name"
+                    bind:background="@null"
                     app:srcCompat="@drawable/ic_more_button"
-                    android:contentDescription="@string/more_content_description" />
+                    bind:contentDescription="@string/more_content_description" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
