--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="secondaryTextColor">#000000</color>
 
     <color name="background_color">#FFFFFF</color>
-    <color name="redirect_color">#2196F3</color>
+    <color name="redirect_color">#096CD8</color>
 
     <color name="grey">#FFF7F6</color>
     <color name="grey_color">#EDE4E3</color>
