--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -60,6 +60,7 @@
             android:text="@string/empty_state_room"
             android:textAlignment="center"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:visibility="gone" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
