--- a/app/src/main/res/layout/fragment_phone_auth3.xml
+++ b/app/src/main/res/layout/fragment_phone_auth3.xml
@@ -67,6 +67,7 @@
                     android:hint="@string/phone"
                     android:importantForAutofill="no"
                     android:inputType="phone"
+                    android:imeOptions="actionDone"
                     android:text="@={viewModel.phoneNumber}"
                     android:afterTextChanged="@{viewModel::afterPhoneNumberChanged}"/>
             </LinearLayout>
@@ -149,6 +150,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="30dp"
+                android:imeOptions="actionDone"
                 app:codeHiddenMask="*"
                 app:codeHiddenMode="true"
                 app:codeLength="6"
